--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         <activity android:name=".Health_Info"></activity>
         <activity android:name=".Personal_info" />
         <activity android:name=".Login_Screen" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".Welcome_screen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
