--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Health_Info"></activity>
+        <activity android:name=".Login_account"></activity>
+        <activity android:name=".Health_Info" />
         <activity android:name=".Personal_info" />
         <activity android:name=".Login_Screen" />
         <activity android:name=".Welcome_screen">
