navigation bar is going on!

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Login_account"></activity>
+        <activity
+            android:name=".Tracking_info"
+            android:label="@string/title_activity_tracking_info"></activity>
+        <activity android:name=".Period_info" />
+        <activity android:name=".Selected_Field" />
+        <activity android:name=".Login_account" />
         <activity android:name=".Health_Info" />
         <activity android:name=".Personal_info" />
         <activity android:name=".Login_Screen" />
