--- a/build.gradle
+++ b/build.gradle
@@ -8,8 +8,11 @@ buildscript {
         
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.4.1'
+
         classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
+        classpath 'com.android.tools.build:gradle:3.4.1'
+        classpath 'com.google.gms:google-services:4.2.0'
+
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -19,7 +22,8 @@ allprojects {
     repositories {
         google()
         jcenter()
-        
+        mavenLocal()
+        maven { url 'https://maven.fabric.io/public' }
     }
     repositories {
         maven { url 'https://jitpack.io' }
