--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,10 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Body_Info"></activity>
+        <activity android:name=".Activeness" />
+        <activity android:name=".BodyInfoActivity" />
         <activity
             android:name=".Tracking_info"
-            android:label="@string/title_activity_tracking_info"></activity>
+            android:label="@string/title_activity_tracking_info" />
         <activity android:name=".Period_info" />
         <activity android:name=".Selected_Field" />
         <activity android:name=".Login_account" />
