radio buttons and icons of navigation bar is done

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,29 +4,47 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/logo"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/logo"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".stepsChart"></activity>
-        <activity android:name=".BodyActivity" />
-        <activity android:name=".BodyInfo" />
+        <activity android:name=".stepsChart"
+            android:launchMode="singleTask"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".BodyActivity"
+            android:launchMode="singleTask"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".BodyInfo"
+            android:launchMode="singleTask"
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".Tracking_info"
-            android:label="@string/title_activity_tracking_info" />
-        <activity android:name=".Period_info" />
-        <activity android:name=".Selected_Field" />
-        <activity android:name=".Login_account" />
-        <activity android:name=".Health_Info" />
+            android:label="@string/title_activity_tracking_info"
+            android:launchMode="singleTask"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".Period_info"
+            android:launchMode="singleTask"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".Selected_Field"
+            android:launchMode="singleTask"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".Login_account"
+            android:launchMode="singleTask"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".Health_Info"
+            android:launchMode="singleTask"
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".Personal_info"
-            android:launchMode="singleTask" />
+            android:launchMode="singleTask"
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".Login_Screen"
             android:launchMode="singleTask"
             android:screenOrientation="portrait" />
-        <activity android:name=".Welcome_screenActivity">
+        <activity android:name=".Welcome_screenActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
