--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,41 +9,54 @@
         android:roundIcon="@mipmap/logo"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".stepsChart"
+        <activity
+            android:name=".GymTrainer_Dashboard"
+            android:label="@string/title_activity_gym_trainer__dashboard"
             android:launchMode="singleTask"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".BodyActivity"
+            android:screenOrientation="portrait"></activity>
+        <activity
+            android:name=".stepsChart"
             android:launchMode="singleTask"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".BodyInfo"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".BodyActivity"
             android:launchMode="singleTask"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".BodyInfo"
+            android:launchMode="singleTask"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".Tracking_info"
             android:label="@string/title_activity_tracking_info"
             android:launchMode="singleTask"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".Period_info"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".Period_info"
             android:launchMode="singleTask"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".Selected_Field"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".Selected_Field"
             android:launchMode="singleTask"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".Login_account"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".Login_account"
             android:launchMode="singleTask"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".Health_Info"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".Health_Info"
             android:launchMode="singleTask"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait" />
         <activity
             android:name=".Personal_info"
             android:launchMode="singleTask"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait" />
         <activity
             android:name=".Login_Screen"
             android:launchMode="singleTask"
             android:screenOrientation="portrait" />
-        <activity android:name=".Welcome_screenActivity"
+        <activity
+            android:name=".Welcome_screenActivity"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
