--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
             android:name=".GymTrainer_Dashboard"
             android:label="@string/title_activity_gym_trainer__dashboard"
             android:launchMode="singleTask"
-            android:screenOrientation="portrait"></activity>
+            android:screenOrientation="portrait" />
         <activity
             android:name=".stepsChart"
             android:launchMode="singleTask"
