--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,7 +33,7 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:3.0.0'
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
 
-    implementation 'com.android.support:design:28.1.0'
+   /* implementation 'com.android.support:design:28.1.0'*/
 
     // Firebase Authentication
     implementation 'com.google.firebase:firebase-core:17.0.0'
