--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,12 +33,13 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:3.0.0'
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
 
-   /* implementation 'com.android.support:design:28.1.0'*/
+    implementation 'com.android.support:design:26.1.0'
 
     // Firebase Authentication
     implementation 'com.google.firebase:firebase-core:17.0.0'
     implementation 'com.google.firebase:firebase-auth:18.0.0'
     implementation 'com.firebaseui:firebase-ui-auth:4.3.2'
     implementation 'com.facebook.android:facebook-android-sdk:[4,5]'
+    implementation 'com.google.android.gms:play-services-maps:17.0.0'
 }
-apply plugin: 'com.google.gms.google-services'
+
