--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.fitnesstracker">
+
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.VIBRATE" />
 
     <application
@@ -10,7 +13,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/logo"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
+        android:theme="@style/Theme.AppCompat.Light.NoActionBar"
         tools:ignore="GoogleAppIndexingWarning">
 
         <meta-data
@@ -74,7 +77,8 @@
         </activity> <!-- Google MAP API key -->
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
-            android:value="AIzaSyAtyUV-9L4J1kxX7qGJB-AUuZ-aig3aO0I" />
+            android:value="AIzaSyCiDJHWJJLXAzGB8gO3Ryc0718aRNutfgQ"/>
+            <!--android:value="AIzaSyAtyUV-9L4J1kxX7qGJB-AUuZ-aig3aO0I" />-->
     </application>
 
 
