--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,4 +32,9 @@ dependencies {
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
     implementation 'com.facebook.android:facebook-android-sdk:4.42.0'
     implementation 'com.android.support:design:28.0.0'
+
+    implementation 'com.github.npanigrahy:Custom-Calendar-View:v1.1'
+    implementation 'com.google.guava:guava:18.0'
+    implementation 'com.google.code.gson:gson:2.8.0'
+    implementation 'joda-time:joda-time:2.9.7'
 }
